Add network-structure along with some more required libraries.
Basic functionality enabled...

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,15 +3,15 @@ version: 0.0.1
 description: 'Server -> Client WebSocket bridge for Bukkit.'
 
 author: NoEff3x
-authors: [jacklink01, ColbyDude]
+authors: [jAcKlInK01, Colbydude]
 website: http://voidteam.net/minecraft/chat
 
 main: net.voidteam.socketchat.SocketChat
 database: false
-depend: [JSONAPI]
+depend: [JSONAPI, Essentials]
 
 commands:
   socketchat:
     description: 'Command set used by SocketChat.'
     aliases: [sc, webchat]
-    usage: Syntax error! Simply type /&lt;socketchat&gt; <args>
+    usage: Syntax error! Simply type /socketchat <args>
