Add command listeners for kick and kick-all.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -14,4 +14,4 @@ commands:
   socketchat:
     description: 'Command set used by SocketChat.'
     aliases: [sc, webchat]
-    usage: Syntax error! Simply type /socketchat <args>
+    usage: Syntax error! Simply type /socketchat <kick-all|kick> [username]
