Better vanish support and command operation
- Added new commands: /wkick and /wkickall
- Reorganized the way the commands are handled
- Now using isHidden() on Essentials to detect vanished players
- Added /sc fj and /sc fq which mimic /v fj and /v fq on webchat
- Now including the WebSocket API properly
- Other minor things

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -14,4 +14,10 @@ commands:
   socketchat:
     description: 'Command set used by SocketChat.'
     aliases: [sc, webchat]
-    usage: Syntax error! Simply type /socketchat <kick-all|kick> [username]
+    usage: /sc <kickall|kick> [username]
+  wkick:
+    description: 'Kick command for SocketChat.'
+    usage: /wkick <username>
+  wkickall:
+    description: 'Kickall command for SocketChat.'
+    usage: /wkickall
