--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -8,7 +8,7 @@ website: http://voidteam.net/minecraft/chat
 
 main: net.voidteam.socketchat.SocketChat
 database: false
-depend: [Essentials, PExChat]
+depend: [Essentials, Vault, PExChat]
 
 commands:
   socketchat:
